; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_red.c_red_dump_stats.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_sch_red.c_red_dump_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Qdisc = type { i32 }
%struct.gnet_dump = type { i32 }
%struct.red_sched_data = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i32, i32, i64, i64 }
%struct.tc_red_xstats = type { i64, i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Qdisc*, %struct.gnet_dump*)* @red_dump_stats to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @red_dump_stats(%struct.Qdisc* %0, %struct.gnet_dump* %1) #0 {
  %3 = alloca %struct.Qdisc*, align 8
  %4 = alloca %struct.gnet_dump*, align 8
  %5 = alloca %struct.red_sched_data*, align 8
  %6 = alloca %struct.tc_red_xstats, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %3, align 8
  store %struct.gnet_dump* %1, %struct.gnet_dump** %4, align 8
  %7 = load %struct.Qdisc*, %struct.Qdisc** %3, align 8
  %8 = call %struct.red_sched_data* @qdisc_priv(%struct.Qdisc* %7)
  store %struct.red_sched_data* %8, %struct.red_sched_data** %5, align 8
  %9 = getelementptr inbounds %struct.tc_red_xstats, %struct.tc_red_xstats* %6, i32 0, i32 0
  %10 = load %struct.red_sched_data*, %struct.red_sched_data** %5, align 8
  %11 = getelementptr inbounds %struct.red_sched_data, %struct.red_sched_data* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.red_sched_data*, %struct.red_sched_data** %5, align 8
  %15 = getelementptr inbounds %struct.red_sched_data, %struct.red_sched_data* %14, i32 0, i32 0
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = add nsw i64 %13, %17
  store i64 %18, i64* %9, align 8
  %19 = getelementptr inbounds %struct.tc_red_xstats, %struct.tc_red_xstats* %6, i32 0, i32 1
  %20 = load %struct.red_sched_data*, %struct.red_sched_data** %5, align 8
  %21 = getelementptr inbounds %struct.red_sched_data, %struct.red_sched_data* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 2
  %23 = load i32, i32* %22, align 8
  store i32 %23, i32* %19, align 8
  %24 = getelementptr inbounds %struct.tc_red_xstats, %struct.tc_red_xstats* %6, i32 0, i32 2
  %25 = load %struct.red_sched_data*, %struct.red_sched_data** %5, align 8
  %26 = getelementptr inbounds %struct.red_sched_data, %struct.red_sched_data* %25, i32 0, i32 0
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 3
  %28 = load i32, i32* %27, align 4
  store i32 %28, i32* %24, align 4
  %29 = getelementptr inbounds %struct.tc_red_xstats, %struct.tc_red_xstats* %6, i32 0, i32 3
  %30 = load %struct.red_sched_data*, %struct.red_sched_data** %5, align 8
  %31 = getelementptr inbounds %struct.red_sched_data, %struct.red_sched_data* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 5
  %33 = load i64, i64* %32, align 8
  %34 = load %struct.red_sched_data*, %struct.red_sched_data** %5, align 8
  %35 = getelementptr inbounds %struct.red_sched_data, %struct.red_sched_data* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i32 0, i32 4
  %37 = load i64, i64* %36, align 8
  %38 = add nsw i64 %33, %37
  store i64 %38, i64* %29, align 8
  %39 = load %struct.gnet_dump*, %struct.gnet_dump** %4, align 8
  %40 = call i32 @gnet_stats_copy_app(%struct.gnet_dump* %39, %struct.tc_red_xstats* %6, i32 24)
  ret i32 %40
}

declare dso_local %struct.red_sched_data* @qdisc_priv(%struct.Qdisc*) #1

declare dso_local i32 @gnet_stats_copy_app(%struct.gnet_dump*, %struct.tc_red_xstats*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
